# SQLServerConnector

./: .gitignore  README.md  dbConnector.py  pyproject.toml  requirements.txt
config/: db_config.yaml
notebooks/: demo_usage.ipynb
src/: SQLServerConnector.py  __init__.py  connector.py  dbConnector.py  dbConnector_v2.py  example.py  utils.py
src/SQLServerConnector.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sqlServerConnector.egg-info/: PKG-INFO
