[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SQLServerConnector"
version = "0.0.1"
authors = [
  { name="johnnyb1509", email="150994johnnyb@gmail.com" },
]
description = "A small tool for connecting to SQL SERVER with very basic functions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/johnnyb1509/SQLServerConnector"
"Bug Tracker" = "https://github.com/johnnyb1509/SQLServerConnector/issues"